# breez-sdk-liquid-docs

./: .gitignore  README.md  book.toml  makefile  styles.css  versioning.json
.github/workflows/: main.yml
book/: 404.html  index.html  searchindex.js  searchindex.json  styles.css  toc.html  toc.js
book/css/: general.css
book/guide/: about_breez_sdk_liquid.html  assets.html  base_fees.html  bip353_pay_service.html  buy_btc.html  configuration.html  connecting.html  end-user_fees.html  events.html  fiat_currencies.html  getting_started.html  install.html  list_payments.html  lnurl.html  lnurl_auth.html  lnurl_pay.html  lnurl_pay_service.html  lnurl_withdraw.html  logging.html  messages.html  nwc.html  parse.html  partner_fees.html  pay_onchain.html  pay_service.html  payments.html  production.html  receive_onchain.html  receive_payment.html  receiving_payments_offline.html  refund_payment.html  rescanning_swaps.html  self_signer.html  send_payment.html  uxguide.html  uxguide_display.html  uxguide_receive.html  uxguide_seed.html  uxguide_send.html  wallet_state.html
book/notifications/: advanced.html  android_plugin.html  android_service.html  android_setup.html  changing_strings.html  custom_messages.html  custom_notifications.html  getting_started.html  ios_connect.html  ios_plugin.html  ios_service.html  ios_setup.html  (+4 more)
components/: llm-buttons.css  llm-buttons.js  outdated-alert.css  outdated-alert.js  version-switcher.css  version-switcher.js
examples/python/cli/: README.md  cli.py  pyproject.toml
scripts/: activate  build-versioned-docs.sh  setup_local_dart.sh  setup_local_go.sh  setup_local_python.sh
snippets/python/: .gitignore  README.md  main.py  pyproject.toml
snippets/python/src/: buy_btc.py  configuration.py  fiat_currencies.py  getting_started.py  list_payments.py  lnurl_auth.py  lnurl_pay.py  lnurl_withdraw.py  messages.py  non_bitcoin_asset.py  nostr_wallet_connect.py  nwc.py  parsing_inputs.py  pay_onchain.py  plugins.py  receive_onchain.py  receive_payment.py  self_signer.py  send_payment.py  webhook.py
snippets/rust/: Cargo.toml
snippets/rust/src/: buy_btc.rs  configuration.rs  fiat_currencies.rs  getting_started.rs  list_payments.rs  lnurl_auth.rs  lnurl_pay.rs  lnurl_withdraw.rs  main.rs  messages.rs  non_bitcoin_asset.rs  nostr_wallet_connect.rs  nwc.rs  parsing_inputs.rs  pay_onchain.rs  plugins.rs  receive_onchain.rs  receive_payment.rs  self_signer.rs  send_payment.rs  webhook.rs
src/: SUMMARY.md
(+241 files in other folders)
