[package]
name = "liquid_sdk_docs_snippets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bip39 = { version = "2", features = ["rand"] }
breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", rev = "4d442c4007710e4dbfe18b6714067384c084695a" }
breez-sdk-liquid-nwc = { git = "https://github.com/breez/breez-sdk-liquid", rev = "4d442c4007710e4dbfe18b6714067384c084695a" }
async-trait = "0.1"
log = "0.4"
tokio = "1.42.0"

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/breez/rust-secp256k1-zkp.git", rev = "eac2e479255a6e32b5588bc25ee53c642fdd8395" }
